--- a/Task02/pom.xml
+++ b/Task02/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>ij</artifactId>
       <version>1.52i</version>
     </dependency>
+    <dependency>
+      <groupId>sc.fiji</groupId>
+      <artifactId>fiji</artifactId>
+      <version>2.0.0-pre-7</version>
+    </dependency>
   </dependencies>
 
   <build>
