--- a/Task02/pom.xml
+++ b/Task02/pom.xml
@@ -39,6 +39,16 @@
       <artifactId>fiji</artifactId>
       <version>2.0.0-pre-7</version>
     </dependency>
+    <dependency>
+      <groupId>fr.inra.ijpb</groupId>
+      <artifactId>MorphoLibJ_</artifactId>
+      <version>1.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>sc.fiji</groupId>
+      <artifactId>Auto_Threshold</artifactId>
+      <version>1.17.1</version>
+    </dependency>
   </dependencies>
 
   <build>
