--- a/Task02/pom.xml
+++ b/Task02/pom.xml
@@ -52,6 +52,11 @@
           <artifactId>Auto_Threshold</artifactId>
           <version>1.17.1</version>
       </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.4</version>
+    </dependency>
   </dependencies>
 
   <build>
