--- a/Task02/pom.xml
+++ b/Task02/pom.xml
@@ -53,6 +53,11 @@
           <version>1.17.1</version>
       </dependency>
     <dependency>
+      <groupId>sc.fiji</groupId>
+      <artifactId>Trainable_Segmentation</artifactId>
+      <version>3.2.29</version>
+    </dependency>
+    <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.4</version>
