--- a/Task02/pom.xml
+++ b/Task02/pom.xml
@@ -62,6 +62,11 @@
       <artifactId>commons-cli</artifactId>
       <version>1.4</version>
     </dependency>
+    <dependency>
+      <groupId>nz.ac.waikato.cms.weka</groupId>
+      <artifactId>classificationViaClustering</artifactId>
+      <version>1.0.7</version>
+    </dependency>
   </dependencies>
 
   <build>
