--- a/Task02/pom.xml
+++ b/Task02/pom.xml
@@ -67,6 +67,11 @@
       <artifactId>classificationViaClustering</artifactId>
       <version>1.0.7</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.8.1</version>
+    </dependency>
   </dependencies>
 
   <build>
