--- a/Task02/pom.xml
+++ b/Task02/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>de.bit.pl2.p3</groupId>
   <artifactId>Task02</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>Task02</name>
 
@@ -26,52 +26,42 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>RELEASE</version>
       <scope>test</scope>
-    </dependency>
-	<dependency>
-		<groupId>nz.ac.waikato.cms.weka</groupId>
-		<artifactId>weka-dev</artifactId>
-		<version>3.9.3</version>
-	</dependency>
-    <dependency>
-      <groupId>net.imagej</groupId>
-      <artifactId>ij</artifactId>
-      <version>1.52i</version>
     </dependency>
     <dependency>
       <groupId>sc.fiji</groupId>
       <artifactId>Trainable_Segmentation</artifactId>
       <version>3.2.29</version>
     </dependency>
-    <dependency>
+      <dependency>
+          <groupId>fr.inra.ijpb</groupId>
+          <artifactId>MorphoLibJ_</artifactId>
+          <version>1.4.0</version>
+      </dependency>
+
+      <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.8.1</version>
     </dependency>
-	<dependency>
-      <groupId>fr.inra.ijpb</groupId>
-      <artifactId>MorphoLibJ_</artifactId>
-      <version>1.4.0</version>
-    </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-core</artifactId>
+          <version>5.1.3.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>5.1.3.RELEASE</version>
+      </dependency>
     <dependency>
-      <groupId>nz.ac.waikato.cms.weka</groupId>
-      <artifactId>classificationViaClustering</artifactId>
-      <version>1.0.7</version>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.4</version>
     </dependency>
-	<dependency>
-		<groupId>sc.fiji</groupId>
-		<artifactId>Auto_Threshold</artifactId>
-		<version>1.17.1</version>
-	</dependency>
   </dependencies>
 
   <build>
